--- a/Alg_4/doc.tex
+++ b/Alg_4/doc.tex
@@ -5,7 +5,10 @@
 \usepackage{mathtools}
 \usepackage{systeme}
 \usepackage{lipsum}
-\usepackage{mdframed}
+\usepackage{gauss}
+
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\renewcommand{\rowmultlabel}[1]{\cdot \; #1}
 
 \title{Algebrauppgift 4 - Ekvationssystem}
 \author{Emma Bastås}
@@ -57,7 +60,7 @@ För linjära matrisekvationer på denna form finns precis tre möjligheter avse
 \begin{itemize}
   \item Det finns ingen lösning.
   \item Det finns precis en lösning.
-  \item Det finns oändligt många lösningar.
+  \item Det finns oöndligt månda lösningar.
 \end{itemize}
 
 \noindent Att determinanten till $A$ är skiljd från noll är ekvivalent med att $A$ har en invers, vilket i sin tur är ekvivalent med att $AX = B$ har precis en lösning (nämligen $X = A^{-1}B$). Är determinanten noll så gäller då antingen att ingen eller oändligt många lösningar till $AX = B$ finns.
@@ -72,7 +75,7 @@ Vi finner nu de värden på $a$ för vilket $\det A = 0$. Här använder vi oss 
   \iff \quad &-a^{3} + 9a^{2} -23a +15 = 0\text{.} \label{3rd_degree}
 \end{align}
 \\
-Vi finner att $\det A = 0$ är en ekvivalent ekvation till (\ref{3rd_degree}). Att lösa tredjegradsekvationer i det generella fallet ligger utanför ramen för denna kurs, men vi har tur (eller snarare ett tillrättalagt problem) och kan med hjälp av Rationella rotsatsen, faktorsatsen och polynomdivision lösa ekvationen.\footnote{Se kapitel 9 och 10 i algebrakompendiet för en redogörelse för hur detta görs.}
+Vi finner att $\det A = 0$ är en ekvivalent ekvation till (\ref{3rd_degree}). Att lösa tredjegradsekvationer i det generella fallet ligger utanför ramen för denna kurs, men vi har tur (eller snarare ett tillrättalagt problem) och kan med hjälp av Rationella rotsatsen, faktorsatsen och polynomdivision lösa ekvationen.\footnote{Se kapitell 9 och 10 i algebrkompendiumet för en redogörelse för hur detta görs.}
 \\
 \\
 Vi finner att lösningarna till $\det A = 0$ är $a = 1$, $a = 3$ och $a = 5$. Detta är ekvivalent med att $AX = B$ har oändligt många, eller inga lösningar för var och ett av dessa värden på $a$. För alla andra värden på $a$ gäller därav en unik lösning till ekvationen.
@@ -81,151 +84,104 @@ Vi finner att lösningarna till $\det A = 0$ är $a = 1$, $a = 3$ och $a = 5$. D
 Nu återstår att bestämma antalet lösningar för $a = 1$, $a = 3$ och $a = 5$.
 \\
 \\
-För varje av dessa tre fall finns alltså precis två alternativ: Inga eller oändligt många lösningar. $AX = B$ har oändligt många lösningar om och endast om $A = \mathbf{0}$ och $B = \mathbf{0}$ eller om det finns en $3 \times 3$ matris $M$ så att:
-
-\begin{gather}
-  MA =
-  \begin{pmatrix}
-    i & j & k \\
-    0 & 0 & 0 \\
-    0 & 0 & 0
-  \end{pmatrix}
-  \quad \text{och} \quad
-  MB =
-  \begin{pmatrix}
-    h \\ 0 \\ 0
-  \end{pmatrix} \label{lem1}
-\end{gather}
-\\
-där åtminstone ett av $i$, $j$ eller $k$ är skiljd från noll.
-\\
-\\
-Vi multiplicerar $MA$ och $MB$ med de två elementära operationer som motsvarar att addera rad ett till rad två och tre med varsin multipel $\lambda$ och $\mu$:
-\\
-\begin{gather}
-\begin{split}
-  MA =
-  \begin{pmatrix}
-    i & j & k \\
-    && \\
-    &&
-  \end{pmatrix}
-  \quad \iff \quad
-  \begin{pmatrix}
-    1 &&\\
-    \lambda &1&\\
-    \mu&&1\\
-  \end{pmatrix}
-  MA =
-  \begin{pmatrix}
-    i & j & k \\
-    \lambda i & \lambda j & \lambda k \\
-    \mu i & \mu j & \mu k
-  \end{pmatrix}\\[10pt]
-  MB =
-  \begin{pmatrix}
-    h \\ 0 \\ 0
-  \end{pmatrix}
-  \quad \iff \quad
-  \begin{pmatrix}
-    1 &&\\
-    \lambda &1&\\
-    \mu&&1\\
-  \end{pmatrix}
-  MB =
-  \begin{pmatrix}
-    h \\ \lambda \\ \mu
-  \end{pmatrix}\text{.}
-\end{split}\label{lem2}
-\end{gather}
-\\
-Alla elementära operatorer har inverser varav det råder ekvivalens mellan (\ref{lem1}) och (\ref{lem2}). Vi kan omformulera detta till följande hjälplemma:
-
-\begin{mdframed}
-En linjärekvation på formen:
+För dessa tre fall finns alltså precis två alternativ: Inga eller oändligt många lösningar. $AX = B$ har oändligt många lösningar om och endast om det finns en $3 \times 3$ matris $M$ så att:
 
 \begin{gather*}
+  MAX = B \\
+  \iff
   \begin{pmatrix}
-    i & j & k \\
-    \lambda i & \lambda j & \lambda k \\
-    \mu i & \mu j & \mu k
+    i & j & k
   \end{pmatrix}
   X =
   \begin{pmatrix}
-    h \\ \lambda \\ \mu
-  \end{pmatrix}
+  \begin{pmatrix}
 \end{gather*}
-\\
-har oändligt många lösningar om åtminstone ett av $i$, $j$ eller $k$ är skiljd från noll.
-\\
-\\
-Kan ekvationen inte skrivas på denna form har den en entydig eller inga lösningar.
-\end{mdframed}
-
-\noindent Nu är vi reda att ta oss an de tre obestämda fallen.
 \\
 \\
 \textbf{Fallet $a = 1$:}
 \\
 \\
-Vi låter $a = 1$, och betraktar $AX = B$:
+Vi låter $a = 1$, ställer upp ekvationen $AX = B$ för Gauss-Jordan eliminering och utför 2 operationer:
 
 \begin{equation*}
+  \begin{gmatrix}[p]
+    3 & 2 & -1 & \bigm| & 1 \\
+    -2 & 0 & 2 & \bigm| & -2 \\
+    -1 & 2 & 3 & \bigm| & 1
+    \rowops
+      \add[-1]{0}{2}
+      \add[-2]{1}{2}
+  \end{gmatrix}
+  \rightarrow
   \begin{pmatrix}
-    3 & 2 & -1\\
-    -2 & 0 & 2\\
-    -1 & 2 & 3
-  \end{pmatrix}
-  X =
-  \begin{pmatrix}
-    1 \\ -2 \\ 1
+    3 & 2 & -1 & \bigm| & 1 \\
+    -2 & 0 & 2 & \bigm| & -2 \\
+    0 & 0 & 0 & \bigm| & 4
   \end{pmatrix}\text{.}
 \end{equation*}
 \\
-Det finns ingen ekvation ekvivalent till denna som är på den formen hjälplemmat anger. Vi vet också sedan innan att denna ekvation inte har en entydig lösning, alltså saknas lösningar till $AX = B$ för $a = 1$.
+Skrivsättet här är bara lite smidig notation, det som egentligen sker är följande:
+
+\begin{gather}
+  AX = B \nonumber \\[2pt]
+  \iff \quad
+               \begin{pmatrix}
+                 1 & & \\
+                 & 1 & \\
+                 & -2 & 1
+               \end{pmatrix}
+               \begin{pmatrix}
+                 1 & & \\
+                 & 1 & \\
+                 -1 & & 1
+               \end{pmatrix}
+               AX =
+                              \begin{pmatrix}
+                 1 & & \\
+                 & 1 & \\
+                 -1 & & 1
+               \end{pmatrix}
+               \begin{pmatrix}
+                 1 & & \\
+                 & 1 & \\
+                 & -2 & 1
+               \end{pmatrix}
+               B \nonumber \\[4pt]
+  \iff \quad
+               \begin{pmatrix}
+                 3 & 2 & -1 \\
+                 -2 & 0 & 2 \\
+                 0 & 0 & 0
+               \end{pmatrix}
+               X =
+               \begin{pmatrix}
+                 1 \\ -2 \\ 4
+               \end{pmatrix}
+               \label{a=1}
+\end{gather}
+\\
+Detta är ekvivalent med ekvatoinssystemet:
+
+\begin{gather*}
+  \begin{cases}
+    \cdots = 1 \\
+    \cdots = -2 \\
+    0x_{0} + 0x_{1} + 0x_{2} = 4
+  \end{cases}
+\end{gather*}
+\\
+och det är uppenbar att detta saknar lösningar. Alltså saknar den ekvivalenta ekvationen $AX = B$ lösningar för $a = 1$.
 \\
 \\
-\textbf{Fallet $a = 3$:}
+\textbf{Fallet a = 3:}
 \\
 \\
 Vi låter $a = 3$ och betraktar $AX = B$:
 
 \begin{gather*}
   \begin{pmatrix}
-    1 & 2 & -1 \\
-    -2 & -2 & 2 \\
-    -1 & 2 & 1\\
+    1 &
   \end{pmatrix}
-  X =
-  \begin{pmatrix}
-    1 \\ -2 \\ 1
-  \end{pmatrix}\text{.}
 \end{gather*}
-\\
-Med samma resonemang som för $a = 1$ visar vi att $AX = B$ saknar lösningar för $a = 3$
-\\
-\\
-\textbf{Fallet $a = 5$:}
-\\
-\\
-Vi låter $a = 5$ och betraktar $AX = B$:
-\begin{gather*}
-  \begin{pmatrix}
-    -1 & 2 & -1 \\
-    -2 & -4 & 2 \\
-    -1 & 2 & -1\\
-  \end{pmatrix}
-  X =
-  \begin{pmatrix}
-    1 \\ -2 \\ 1
-  \end{pmatrix}\text{.}
-\end{gather*}
-\\
-Med samma resonemang som för $a = 1$ visar vi att $AX = B$ saknar lösningar för $a = 5$
-\\
-\\
-För att sammanfatta så har vi först visat att $AX = B$ har entydiga lösningar förutom då $a = 1$, $a = 3$ eller $a =5$. För dessa fall har vi visat att lösningar saknas.
-\\
-\centerline{$\qed$}
 
 \end{document}
