--- a/An_3/doc.tex
+++ b/An_3/doc.tex
@@ -98,7 +98,7 @@ Nu har vi funnit samtliga asymptoter till $y = f(x)$: $x = -1$, $y = 2x -1$ och 
 Notera att $f(x)$ inte är deriverbar i punkten $x = 1$, går vi tillbaka till derivatans definition finner vi att vi får två olika derivator beroende på från vilket håll vi närmar oss $x = 1$.
 \\
 \\
-Att en punkt $x_{0}$ är ett extremvärde till en funktion $f(x)$ medför alltid en av tre påståenden:
+Att en punkt $x_{0}$ är ett extremvärde till en funktion $f(x)$ medför alltid ett av tre påståenden:
 
 \begin{enumerate}[i)]
         \item $x_{0}$ är en ändpunkt till definitionsintervalet till $f(x)$.
