--- a/An_3/doc.tex
+++ b/An_3/doc.tex
@@ -2,6 +2,7 @@
 
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{enumerate}
 \usepackage{mdframed}
